tests/tests/snapshots/test__kotlin__kotlin-export-raw.snap
---
source: tests/tests/kotlin.rs
expression: "Kotlin::default().export(&raw_types(),\nIdentityFormat).expect(\"Kotlin export should succeed\")"
---
// This file has been generated by Specta. Do not edit it manually.

/**
 * Account information sent to the client.
 */
public data class Account<T>(
    /**
     * Stable account identifier.
     */
    public val id: ULong,
    public val display_name: String,
    public val metadata: Map<String, T?>,
    public val nickname: String? = null
)

public sealed interface Event<T> {
    public class Started<T> : Event<T>
    public data class Message<T>(
        public val value: String
    ) : Event<T>
    public data class Progress<T>(
        public val current: UInt,
        public val total: UInt
    ) : Event<T>
    public data class Generic<T>(
        public val value: T
    ) : Event<T>
}

public enum class KeywordEnum {
    When
}

@JvmInline
public value class NewType(public val value: String)

public data class TupleRecord(
    public val field0: UByte,
    public val field1: String,
    public val field2: Boolean
)

public data class UsesEverything(
    public val account: Account<String>,
    public val event: Event<UByte>,
    public val tuple: Pair<String, Int>,
    public val nested: List<Account<Boolean>?>,
    public val keyword: KeywordEnum
)
