tests/tests/snapshots/test__kotlin__kotlin-export-serde.snap
---
source: tests/tests/kotlin.rs
expression: "Kotlin::default().package(\"dev.specta.generated\").export(&raw_types(),\nspecta_serde::Format).expect(\"Serde-formatted Kotlin export should succeed\")"
---
// This file has been generated by Specta. Do not edit it manually.

package dev.specta.generated

/**
 * Account information sent to the client.
 */
public data class Account<T>(
    /**
     * Stable account identifier.
     */
    public val id: kotlin.ULong,
    public val display_name: kotlin.String,
    public val metadata: kotlin.collections.Map<kotlin.String, T?>,
    public val nickname: kotlin.String? = null
)

public sealed interface Event<T> {
    public class Started<T> : Event<T>
    public data class Message<T>(
        public val value: kotlin.String
    ) : Event<T>
    public data class Progress<T>(
        public val current: kotlin.UInt,
        public val total: kotlin.UInt
    ) : Event<T>
    public data class Generic<T>(
        public val value: T
    ) : Event<T>
}

public enum class KeywordEnum {
    When
}

@kotlin.jvm.JvmInline
public value class NewType(public val value: kotlin.String)

public data class TupleRecord(
    public val field0: kotlin.UByte,
    public val field1: kotlin.String,
    public val field2: kotlin.Boolean
)

public data class UsesEverything(
    public val account: Account<kotlin.String>,
    public val event: Event<kotlin.UByte>,
    public val tuple: kotlin.Pair<kotlin.String, kotlin.Int>,
    public val nested: kotlin.collections.List<Account<kotlin.Boolean>?>,
    public val keyword: KeywordEnum
)
